# android_backup_server

./: .gitignore  Cargo.toml  compose.yml
.docker/: Dockerfile
.github/workflows/: code-build.yml  code-check.yml  code-style.yml  docker-image.yml
src/: main.rs
src/api/: mod.rs  server.rs
src/api/auth/: jwt_auth.rs
src/api/routes/: chunk.rs  file.rs  liveliness.rs  mod.rs
src/backup/: device.rs  device_chunks.rs  device_files.rs  mod.rs
src/backup/storage/: chunks_storage.rs  chunks_storage_local.rs  files_storage.rs  files_storage_local.rs  mod.rs
src/routes/: chunk.rs  file.rs  liveliness.rs  mod.rs
src/tasks/: file_consistency.rs  mod.rs
