[package]
name = "android_backup_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = { version = "4.13.0"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0-rc.5"
log = "0.4"
env_logger = "0.11.8"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"
clap = { version = "4.6.0", features = ["derive"] }
